2.0 release candidate (#57)
* WT style lagging camera for Tanks, Vehicles

* fix vehicle packet

* improve the pointer

* fix lazy raycast

* fix projection by using GLU project

* fix seat iteration issues

* fixes

* interpolation

* Better transformation math

* Revert "Better transformation math"

This reverts commit 16b8b6719b699833f6a9c470ee33f13967f14460.

* revert

* cleanup

* restructure turret ballistics

* fix camera lock application failure

* fix audio typo

* Chaff, bullet porting

* Reforged Weapon attrition porting

* Reforged Weapon attrition porting: part 2

* Reforged Weapon attrition porting: part 3

* fix typo

* fix inaccuracy bypass

* left click to shoot

* mortar HUD fixes

* raytraced mortar

* more control over builtin pack

* BVR,RWR,Jammer

* fix input

* Airburst

* Reforged fields

* Port mcheli reforged camera

* detached aim for everything

* fixes

* Components

* Revert "Components"

This reverts commit d088099a94e0ee3a0981c821b682fd882cf512ff.

* Fix aux gunner aim corrupting turret rotation via global detached aim state

Detached weapon aim (WT-style lagging turret) was aircraft-global and
writable from every crew seat: handleSeatMouseControl fed the seat
gunner's aim into setDetachedWeaponAim (which also overwrites
lastRiderYaw/Pitch, the turret yaw driver), control packets from any
rider applied or cleared it server-side, and getWeaponUserYaw/Pitch
ignored the entity argument while it was active. Turning a
turret-mounted aux gun (e.g. Abrams m2_rws/m240_r) then switching to
the driver seat snapped the turret to the aux gun's aim.

Scope the state to its owners:
- Seat gunners no longer set or clear detached aim; their gun lags via
  the rate-limited weapon stepping with a free camera.
- Server and client gate detached aim packets by isPilot.
- getWeaponUserYaw/Pitch apply detached aim only to the pilot and the
  fire-packet aim only to the firing user (setPacketWeaponUserAim now
  records the user).
- onUpdate no longer stomps